# grep-file-search

./: CMakeLists.txt  DESIGN.md  README.md  REQUIREMENTS.txt
src/: CMakeLists.txt  buffer.cpp  buffer.h  helpers.cpp  helpers.h  main.cpp
test/: CMakeLists.txt  tests-buffer.cpp  tests-helpers.cpp
